test_datasets/generated/syntax_errors/error_1.py
def calculate_total(items)  # ERROR: Missing colon
    total = 0
    for item in items:
        total += item
    return total
